2008-07-11  Jeffrey Stedfast  <fejj@novell.com>

	* src/uudecode.c (uudecode): Don't base64 decode the
	end-tag ("====\n"). Fixes bug #542222.

2008-07-08  Jeffrey Stedfast  <fejj@novell.com>

	* COPYING: Fixed to reference LGPL v2.1

	* gmime/gmime-common.h: Removed unused prototypes.

2008-07-04  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #541578

	* gmime/gmime-message.c (g_mime_message_add_recipient): Change
	'type' argument to const char *.
	(g_mime_message_add_recipients_from_string): Same.

2008-06-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.h (GMIME_QP_ENCODE_LEN): Add an extra byte for
	\n in the case of quoted_encode_close(). Thanks to Peter
	Bloomfield for discovering this.

2008-06-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (decode_mailbox): Prevent reading past
	the end of the input string.

2008-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* examples/basic-example.c: Fixed to use GMimeSignatureValidity.

2008-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_encrypt):
	Don't use deprecated functions.

2008-05-24  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream.c (stream_eos): Fixed a typo.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* mono/StreamWrapper.cs: Allow seeking to position 0 for
	GMimeStreamFilter. Thanks to Debajyoti Bera for this patch.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.21

	* gmime/gmime-parser.c: Check parser_step() against
	GMIME_PARSER_STATE_ERROR rather than -1 in case the value ever
	changes.
	(struct _GMimeParserPrivate): Changed state to be 16bit int
	instead of a 26bit int which apparently cannot be set to -1 on
	Solaris. Fixes bug #534301.
	(parser_step_headers): Fixed a corner-case where a read boundary
	fell between the \n and \t of a folded header.

2008-05-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version