@@ -1,4 +1,4 @@
-                            GMime, version 2.2.21
+                            GMime, version 2.2.22
                    by Jeffrey Stedfast <fejj@gnome.org>
 
 
